--- a/Camera/nbproject/project.properties
+++ b/Camera/nbproject/project.properties
@@ -40,7 +40,9 @@ includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
